Fixing white space under donate

--- a/rca/static_src/sass/components/_accordion-block.scss
+++ b/rca/static_src/sass/components/_accordion-block.scss
@@ -9,6 +9,10 @@
         margin-top: ($gutter * 4);
     }
 
+    &--no-margin {
+        margin-top: 0;
+    }
+
     &--last {
         @include media-query(large) {
             padding: 0 0 ($gutter * 8);
